--- a/gs-consuming-web-service/complete/pom.xml
+++ b/gs-consuming-web-service/complete/pom.xml
@@ -16,13 +16,18 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
+		<httpclient.version>4.5.13</httpclient.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<!-- tag::dependency[] -->
 		<dependency>
@@ -41,6 +46,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>${httpclient.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.databasesandlife</groupId>
+			<artifactId>java-common</artifactId>
+			<version>18.4.2</version>
 		</dependency>
 	</dependencies>
 
@@ -87,8 +102,9 @@
 <!--		</profile>-->
 	</profiles>
 	<!-- end::profile[] -->
-
+	<packaging>jar</packaging>
 	<build>
+		<finalName>rest-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
