--- a/gs-consuming-web-service/complete/src/main/resources/application.yml
+++ b/gs-consuming-web-service/complete/src/main/resources/application.yml
@@ -1,3 +1,10 @@
+client:
+  default-uri: https://miportafoliouat.transunion.co/ws/UbicaPlusWebService/services/UbicaPlus?wsdl
+  callback: http://dto.ubicaplus.webservice.com/ParametrosUbicaPlusDTO
+  context-path: com.example.consumingwebservice.wsdl
+  user:
+    name: 307883
+    password: Equidad2208*
 logging:
   level:
     com.example.consumingwebservice: INFO
