--- a/ubica.plus.soap.client/src/main/resources/application.properties
+++ b/ubica.plus.soap.client/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-logging.level.org.apache.cxf.services = INFO
+spring.datasource.url = jdbc:oracle:thin:@localhost:1521:ORCL
+spring.datasource.username = user
+spring.datasource.password = pass
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
